[project]
name = "ripple-spiral-breath"
version = "0.1.0"
description = "Breath scheduler + exhale reset + drift/guard framework for long-running LLM loops."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Bridge Master", email="you@example.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/<yourname>/ripple-spiral-breath"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
